compiler/tools/fpp-check/test/state_machine/typed_elements/junction_i32_f32.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/state_machine/typed_elements/junction_i32_f32.fpp:8.5
    choice J { if g enter T else enter T }
    ^
error: type mismatch at junction
[ local path prefix ]/compiler/tools/fpp-check/test/state_machine/typed_elements/junction_i32_f32.fpp:9.5
    on s1 enter J
    ^
type of transition is I32
[ local path prefix ]/compiler/tools/fpp-check/test/state_machine/typed_elements/junction_i32_f32.fpp:10.5
    on s2 enter J
    ^
type of transition is F32
